<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Refract</string>
	<string name="str_add">Add</string>
	<string name="str_advanced">Advanced</string>
	<string name="str_about">About</string>
	<string name="str_bookmark">Bookmark</string>
	<string name="str_bookmarks">Bookmarks</string>
	<string name="str_bookmarkdeleted">Bookmark deleted</string>
	<string name="str_bookmarksaved">Bookmark saved</string>
	<string name="str_coloring">Coloring</string>
	<string name="str_controls">Controls</string>
	<string name="str_delete">Delete</string>
	<string name="str_dragtopan">Drag to pan</string>
	<string name="str_function">Function</string>
	<string name="str_goto">Go to</string>
	<string name="str_help">Help</string>
	<string name="str_imagesaved">Image saved</string>
	<string name="str_imaginarycoordinate">Imaginary coordinate</string>
	<string name="str_itersperframe">Iterations per frame</string>
	<string name="str_palette">Palette</string>
	<string name="str_pinchtozoom">Pinch to zoom</string>
	<string name="str_mapping">Mapping</string>
	<string name="str_palettesize">Palette size</string>
	<string name="str_iterating">Iterating</string>
	<string name="str_realcoordinate">Real coordinate</string>
	<string name="str_renderaswallpaper">Render as wallpaper</string>
	<string name="str_resetcoordinates">Reset coordinates</string>
	<string name="str_save">Save</string>
	<string name="str_settings">Settings</string>
	<string name="str_wallpaper">Wallpaper</string>
	<string name="str_zoomfactor">Zoom factor</string>
	<string name="str_zoomin">Zoom in</string>
	<string name="str_zoomout">Zoom out</string>
	<string name="err_invalidnumber">Invalid number</string>
	<string name="err_numberrange">Must be between %1$d and %2$d</string>
	<string name="err_unabletosave">Unable to save</string>
	<string-array name="arr_paramsfunctionlabels">
		<item>z = z\u00B2 + c</item>
		<item>z = z\u00B3 + c</item>
		<item>z = z\u2074 + c</item>
	</string-array>
	<string-array name="arr_palettemappinglabels">
		<item>Repeat</item>
		<item>Clamp</item>
		<item>Scale global</item>
		<item>Scale auto (slower)</item>
		<item>Histogram (slower)</item>
	</string-array>
</resources>