<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item 
		android:id="@+id/menureset" 
		android:title="@string/str_reset" 
		android:icon="@drawable/ic_menu_reset"
	/>
	<item
		android:id="@+id/menuwallpaper" 
		android:title="@string/str_wallpaper" 
		android:icon="@drawable/ic_menu_wallpaper"
	/>
	<item 
		android:id="@+id/menubookmarks" 
		android:title="@string/str_bookmarks" 
		android:icon="@drawable/ic_menu_bookmarks"
	/>
	<item 
		android:id="@+id/menusave" 
		android:title="@string/str_save"
		android:icon="@drawable/ic_menu_save"
	/>
	<item 
		android:id="@+id/menusettings" 
		android:title="@string/str_settings" 
		android:icon="@drawable/ic_menu_settings"
	/>
	<!-- These items will appear on the overflow menu -->
	<item 
		android:id="@+id/menugoto" 
		android:title="@string/str_goto" 
		android:icon="@drawable/ic_menu_goto"
	/>
	<item 
		android:id="@+id/menuabout" 
		android:title="@string/str_about" 
		android:icon="@drawable/ic_menu_about" 
	/>
</menu>