<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

    <TableRow>
        <ImageView
            android:src="@drawable/ic_button_reset_normal"
        />
        <TextView
            android:text="@string/str_resetcoordinates"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
        />
    </TableRow>
    <TableRow>
        <ImageView
            android:src="@drawable/ic_button_zoomin_normal"
        />
        <TextView
            android:text="@string/str_zoomin"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
        />
    </TableRow>
    <TableRow>
        <ImageView
            android:src="@drawable/ic_button_zoomout_normal"
        />
        <TextView
            android:text="@string/str_zoomout"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
        />
    </TableRow>
    <TableRow>
        <ImageView
            android:src="@drawable/ic_help_dragtopan"
        />
        <TextView
            android:text="@string/str_dragtopan"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
        />
    </TableRow>
    <TableRow>
        <ImageView
            android:src="@drawable/ic_help_pinchtozoom"
        />
        <TextView
            android:text="@string/str_pinchtozoom"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
        />
    </TableRow>
</TableLayout>